Tue Oct 12 15:52:35 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_strerror): unmap some range of errno for
	  workaround of VC10's strerror() and sys_nerr problem.
	  based on a patch from Akio Tajima, [ruby-dev:42355].

Tue Oct 12 15:36:09 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_io_ungetc): use unsigned int for GB18030.

Tue Oct 12 15:10:31 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* numeric.c (rb_enc_uint_chr): split from int_chr.

	* numeric.c (int_chr): use rb_enc_uint_chr.

	* include/ruby/encoding.h (rb_enc_uint_chr): added.

Tue Oct 12 14:04:41 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* numeric.c (int_chr): a codepoint of Ruby M17N must be 32bit
	  unsigned int; GB18030 uses MSB. Also note that OnigCodePoint
	  is defined as uisigned int.

Mon Oct 11 20:20:23 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (HTTP.get): specify ASCII-8BIT as the result
	  encoding of Zlib::GzipReader.
	  http://hibari.2ch.net/test/read.cgi/tech/1281473294/271

Mon Oct 11 14:03:54 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* error.c (syserr_initialize): set the encoding of Errno::*#message
	  as locale. [ruby-dev:42358]

Mon Oct 11 06:11:30 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_io_set_encoding): use rb_funcall2 when the io is not
	  a T_FILE. [ruby-dev:42356]

Fri Oct  8 00:24:54 2010  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/csv.rb: Fixing documentation typos.  [ruby-core:32712]

Thu Oct  7 18:10:35 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cygwin/GNUmakefile.in, win32/Makefile.sub (RCFILES): depend on
	  real config.rb file.  [ruby-core:32709]

Wed Oct  6 11:52:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (fptr_finalize): write_mutex might have been destroyed
	  already in finalization phase, as the order of finalizers is not
	  guaranteed.  rb_mutex_t should be used in place of Mutex object
	  in the future.

Mon Oct  4 12:43:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
