@@ -1,3 +1,7 @@
+Tue Oct 12 18:25:04 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* string.c (rb_str_concat): use unsigned int for GB18030.
+
 Tue Oct 12 15:52:35 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/win32.c (rb_w32_strerror): unmap some range of errno for
